test/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtv-dotnet-deployment
  namespace: test
  labels:
    app: mtv
  annotations:
    kubernetes.io/change-cause: seoulbigdata-registry.ncr.gov-ntruss.com/mtv-dotnet-docker:0.0.1
spec:
  replicas: 3
  progressDeadlineSeconds: 120
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: mtv
  template:
    metadata:
      labels:
        app: mtv
    spec:
      containers:
      - name: core
        image: seoulbigdata-registry.ncr.gov-ntruss.com/mtv-dotnet-docker:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 1350Mi
      imagePullSecrets:
      - name: regsecret
