test/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mtv-dotnet-service
  namespace: test
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /bsp/mtv
  labels:
    app: mtv
spec:
  type: NodePort
  selector:
    app: mtv
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30088
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 1800
