test/test-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/description: 'test ALB ingress controller'
    alb.ingress.kubernetes.io/load-balancer-name: 'test-alb'
    alb.ingress.kubernetes.io/load-balancer-size: 'medium'
    alb.ingress.kubernetes.io/enable-sticky-session: 'true'
    alb.ingress.kubernetes.io/actions.test-server-svc: >
      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"test-server-svc","servicePort":80,"weight":100}]}}
    alb.ingress.kubernetes.io/actions.external-test-service: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"external-test-service","servicePort":30090,"weight":100}]}}
    alb.ingress.kubernetes.io/healthcheck-path: "/"
  labels:
    app: test-alb-ingress
spec:
  ingressClassName: alb
  rules:
  - http:
     paths:
     - path: /bsp/mtv
       pathType: Prefix
       backend:
         service:
            name: external-test-service
            port: 
               name: use-annotation
     - path: /
       pathType: Prefix
       backend:
         service:
            name: test-server-svc
            port: 
               name: use-annotation
